Added map templatetag using Yahoo! REST map interface. Added python-levenshtein requirement to README. Fixed bug where units without primary places aren't handled gracefully.

--- a/mobile_portal/mobile_portal/README
+++ b/mobile_portal/mobile_portal/README
@@ -13,6 +13,7 @@ Install the following packages:
  * python-ldap
  * apache-module-webauth (see http://webauth.stanford.edu/)
  * python-oauth
+ * python-levenshtein
 
 Database
 --------
