--- a/mobile_portal/README
+++ b/mobile_portal/README
@@ -5,13 +5,12 @@ Depenencies
 -----------
 
 Install the following packages:
- * postgresql
  * python-psycopg2
  * python-beautifulsoup
  * python-simplejson
- * python-django
  * python-ldap
  * python-rdflib
+ * python-imaging
  * libsasl2-modules-ldap
  * libapache2-webauth
  * python-oauth (?)
@@ -20,7 +19,24 @@ Install the following packages:
  * python-gdal
  * proj
  * libgeos-3.0.0
- 
+ * binutils
+ * libgdal1-1.5.0
+ * postgresql-8.3
+ * postgresql-8.3-postgis
+ * postgresql-server-dev-8.3
+ * python-setuptools
+
+Now install Django 1.1 using easy_install:
+
+ $ easy_install "Django==1.1"
+
+
+Apache configuration
+--------------------
+
+Create symlinks from /etc/apache/mods-enabled/ssl.(conf|load) to
+/etc/apache2/mods-available/ssl.(conf|load) .
+
 
 Database
 --------
