--- a/mobile_portal/README
+++ b/mobile_portal/README
@@ -11,6 +11,8 @@ Install the following packages:
  * python-ldap
  * python-rdflib
  * python-imaging
+ * python-textile
+ * python-tz
  * libsasl2-modules-ldap
  * libapache2-webauth
  * python-oauth (?)
