--- a/trunk/mobile_portal/README
+++ b/trunk/mobile_portal/README
@@ -28,6 +28,7 @@ Install the following packages:
  * postgresql-8.3-postgis
  * postgresql-server-dev-8.3
  * python-setuptools
+ * python-xml
 
 Now install Django 1.1 and the oauth module for 1.0a using easy_install:
 
