--- a/trunk/mobile_portal/README
+++ b/trunk/mobile_portal/README
@@ -34,6 +34,7 @@ Now install Django 1.1 and the oauth module for 1.0a using easy_install:
 
  $ easy_install "Django==1.1"
  $ easy_install "oauth==1.0.1"
+ $ easy_install pywurfl
 
 
 Apache configuration
