--- a/INSTALL
+++ b/INSTALL
@@ -20,9 +20,8 @@ Debian packages or their equivalents for your distribution or OS:
  * libxslt-dev
  * libldap2-dev
  * libsasl2-dev
- * python-cairo
 
-postgis python-gdal proj libgeos-3.0.0 binutils libgdal1-1.5.0 postgresql-8.3 postgresql-8.3-postgis postgresql-server-dev-8.3 python-virtualenv python-setuptools python-dev libxslt-dev libldap2-dev libsasl2-dev python-cairo
+postgis python-gdal proj libgeos-3.0.0 binutils libgdal1-1.5.0 postgresql-8.3 postgresql-8.3-postgis postgresql-server-dev-8.3 python-virtualenv python-setuptools python-dev libxslt-dev libldap2-dev libsasl2-dev
 
 Unfortunately, pip isn't yet in Debian stable, so you'll need to install it
 using easy_install:
@@ -46,13 +45,6 @@ scripts/install_virtualenv.py. If you want to do this by hand, do the following:
      $ cd ~/mollyenv/mollyproject/branches/extracting_oxford/molly/
      $ pip -E ~/mollyenv/ install `cat requirements/core.txt` --upgrade
      $ python setup.py install
-
-    Unfortunately, the setup script for pycairo doesn't create a required file.
-    Using your favourite editor, create a file
-
-      ~/mollyenv/lib[64]/python-<version>/site-packages/cairo/__init__.py
-
-    containing the line "from _cairo import *".
 
 Once you've set up the database as below, you'll be able to run the development
 server as follows:
