--- a/molly/locale/template/LC_MESSAGES/django.po
+++ b/molly/locale/template/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2011-06-01 10:25+0100\n"
+"POT-Creation-Date: 2011-06-01 10:43+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -108,7 +108,8 @@ msgid ""
 msgstr ""
 
 #: apps/desktop/templates/desktop/index.html:268
-msgid "Various phones showing {{ site_name }}"
+#, python-format
+msgid "Various phones showing %(site_name)s"
 msgstr ""
 
 #: apps/desktop/templates/desktop/index.html:277
@@ -617,41 +618,48 @@ msgstr ""
 #. Translators: A list of stop words to be filtered out during library searches
 #: apps/library/models.py:16
 msgid ""
-"a,able,about,across,after,all,almost,also,am,among,an,and,any,are,as,at,"
+"a,able,about,across,after,all,almost,also,am,among,an,and,any,are,as,at,be,"
+"because,been,but,by,can,cannot,could,dear,did,do,does,either,else,ever,every,"
+"for,from,get,got,had,has,have,he,her,hers,him,his,how,however,i,if,in,into,"
+"is,it,its,just,least,let,like,likely,may,me,might,most,must,my,neither,no,"
+"nor,not,of,off,often,on,only,or,other,our,own,rather,said,say,says,she,"
+"should,since,so,some,than,that,the,their,them,then,there,these,they,this,tis,"
+"to,too,twas,us,wants,was,we,were,what,when,where,which,while,who,whom,why,"
+"will,with,would,yet,you,your"
 msgstr ""
 
-#: apps/library/models.py:80
+#: apps/library/models.py:73
 msgid "You cannot specify both an ISBN and an ISSN."
 msgstr ""
 
-#: apps/library/models.py:84
+#: apps/library/models.py:77
 msgid "You cannot specify both an ISBN and a title or author."
 msgstr ""
 
-#: apps/library/models.py:88
+#: apps/library/models.py:81
 msgid "You must supply some subset of title or author, and ISBN."
 msgstr ""
 
-#: apps/library/models.py:221
+#: apps/library/models.py:214
 msgid "unavailable"
 msgstr ""
 
 #. Translators: Unknown podcast medium type
-#: apps/library/models.py:221 apps/podcasts/models.py:103
+#: apps/library/models.py:214 apps/podcasts/models.py:103
 #: apps/podcasts/models.py:123 apps/podcasts/models.py:129
 #: apps/podcasts/models.py:132
 msgid "unknown"
 msgstr ""
 
-#: apps/library/models.py:221
+#: apps/library/models.py:214
 msgid "stack"
 msgstr ""
 
-#: apps/library/models.py:221
+#: apps/library/models.py:214
 msgid "reference"
 msgstr ""
 
-#: apps/library/models.py:221
+#: apps/library/models.py:214
 msgid "available"
 msgstr ""
 
@@ -2710,7 +2718,7 @@ msgid "Sorry, your search returned no results."
 msgstr ""
 
 #: apps/service_status/views.py:19
-msgid "Check whether OUCS and OLIS services are available"
+msgid "Check whether services are available"
 msgstr ""
 
 #: apps/service_status/templates/service_status/index.html:8
