MOLLY-15: Some syntax error fixes to the documentation

--- a/docs/source/ref/apps/news.txt
+++ b/docs/source/ref/apps/news.txt
@@ -8,7 +8,8 @@ Used to display news feeds to the user.
 Configuration
 -------------
 
-This module has no configuration
+This module has no configuration in setup.py. Rather, feeds are controlled in
+the database as discussed in :doc:`feeds`.
 
 Sample::
 
